--- a/src/app.css
+++ b/src/app.css
@@ -17,13 +17,20 @@
   --body-font: 'Quicksand', sans-serif;
   --body2-font: 'Poppins', sans-serif;
 }
-
+body {
+  color: var(--base-color-dark);
+  font-family: var(--body-font);
+  -webkit-font-smoothing: antialiased;
+}
 html {
   scroll-behavior: smooth;
 }
+img {
+  width: 100%;
+  height: auto;
+}
 
 * {
-  background-color: #ffffff;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
@@ -39,14 +46,17 @@ li {
   display: inline-block;
 }
 
-/* Language: css */
-/* Path: mermas-react-site/src/components/About.css */
 .body_complete {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* height: 100vh;
-  width: 100vw; */
+  height: 100vh;
+  width: 100vw;
   background-color: #ffffff;
+}
+.container-home {
+  z-index: 2;
+  width: 100%;
+  padding: 0 20rem;
 }
