--- a/src/components/course/index.css
+++ b/src/components/course/index.css
@@ -30,8 +30,8 @@
 #course .course-grid {
   display: grid;
   grid-template-areas:
-  "1 2"
-  "3 4";
+    '1 2'
+    '3 4';
   gap: 2.5rem;
   max-width: 42.25rem;
 }
@@ -39,7 +39,8 @@
 #course .course-card {
   padding: 2rem 1.75rem;
   background-color: var(--pink-color-light);
-  box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.25), inset 0px 0px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.25),
+    inset 0px 0px 4px rgba(0, 0, 0, 0.15);
   border-radius: 2rem;
   border: 5px solid var(--white-color);
   position: relative;
@@ -66,6 +67,6 @@
   z-index: 5;
 }
 
-#course span{
+#course span {
   color: var(--body2-font);
 }
