--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -4,15 +4,28 @@
   top: 0;
   left: 0;
   width: 100%;
-  margin-top: 1rem;
+  padding: 2rem 0;
   transition: all 0.5s ease;
   z-index: 100;
+  background: transparent;
 }
+.elipse1 {
+  background: url('./image/Ellipse 6.svg') no-repeat center;
+  background-size: contain;
+  display: block;
+  position: absolute;
+  width: 603.92px;
+  height: 632.94px;
+  left: 120px;
+  top: -260.06px;
 
+  z-index: 1;
+}
 .header.scroll {
-  background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  border-bottom: 1px solid #eaeaea;
+  background-color: var(--white-color);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+  border-bottom: 1px solid #e4e4e4;
+  padding: 2rem 0;
 }
 
 .header nav {
@@ -23,6 +36,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
+  background: transparent;
 }
 .header nav .toggle {
   display: none;
@@ -72,6 +86,8 @@
 
   text-transform: uppercase;
   position: relative;
+  z-index: 9999;
+  background: transparent;
 }
 .logo::after {
   content: '';
