adjust styles incomplete

--- a/src/components/course/index.css
+++ b/src/components/course/index.css
@@ -1,6 +1,12 @@
+.container {
+  width: 100%;
+  max-width: 75rem;
+  margin: 0 auto;
+}
 #course {
   position: relative;
   padding: 4rem 0;
+  width: 100%;
 }
 
 #course .course-image {
