--- a/src/app.css
+++ b/src/app.css
@@ -31,6 +31,8 @@ img {
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
@@ -52,11 +54,25 @@ li {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: #ffffff;
+  padding: 0 22rem;
 }
 .container-home {
   z-index: 2;
   width: 100%;
-  padding: 0 20rem;
+}
+
+@media (max-width: 1200px) {
+  .body_complete {
+    width: auto;
+    padding: 0 2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .body_complete {
+    width: auto;
+    padding: 0 2rem;
+  }
 }
