--- a/src/components/home/index.css
+++ b/src/components/home/index.css
@@ -1,8 +1,8 @@
-/* .container {
+.container {
   width: 100%;
   max-width: 75rem;
   margin: 0 auto;
-} */
+}
 #home {
   padding-top: 15rem;
   position: relative;
