--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -201,4 +201,10 @@
     opacity: 1;
     top: 1.25rem;
   }
+  .elipse1 {
+    width: 250.26px;
+    height: 262.28px;
+    left: -42px;
+    top: -103px;
+  }
 }
