--- a/src/components/home/index.css
+++ b/src/components/home/index.css
@@ -4,9 +4,8 @@
   margin: 0 auto;
 }
 #home {
-  padding-top: 15rem;
   position: relative;
-  width: 100vw;
+  /* margin-top: 25rem; */
 }
 
 #home .elipse1 {
@@ -163,9 +162,10 @@
   }
 
   .elipse2 {
-    width: 344px;
+    width: 100%;
     height: 328px;
-    right: -131px;
+    right: -100px;
+
     top: 255px;
   }
 
