--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -26,6 +26,18 @@
 
   z-index: 1;
 }
+.elipse2 {
+  background: url('./image/Ellipse 7.svg') no-repeat center;
+  background-size: contain;
+  display: block;
+  position: absolute;
+  width: 603.92px;
+  height: 632.94px;
+  left: 0;
+  top: -59.06px;
+  z-index: 1;
+}
+
 .header.scroll {
   background-color: var(--white-color);
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
