add new style in fomr

--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -33,6 +33,18 @@
   padding: 2rem 0;
 }
 
+.elipse2 {
+  background: url('./image/Ellipse 7.svg') no-repeat center;
+  background-size: contain;
+  display: block;
+  position: absolute;
+  width: 603.92px;
+  height: 632.94px;
+  right: 100px;
+  top: -59.06px;
+  z-index: 1;
+}
+
 .header nav {
   display: flex;
   justify-content: space-between;
