--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,10 @@ img {
   width: 100%;
   height: auto;
 }
-
+.fade {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
 * {
   margin: 0;
   padding: 0;
