--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 2rem 0;
+  padding: 1.5rem 0;
   transition: all 0.5s ease;
   z-index: 100;
   background: transparent;
@@ -33,7 +33,7 @@
   position: absolute;
   width: 603.92px;
   height: 632.94px;
-  left: 0;
+  /* left: 0; */
   top: -59.06px;
   z-index: 1;
 }
@@ -42,7 +42,7 @@
   background-color: var(--white-color);
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid #e4e4e4;
-  padding: 2rem 0;
+  padding: 1.5rem 0;
 }
 
 .elipse2 {
