--- a/src/components/galleryGrid/index.css
+++ b/src/components/galleryGrid/index.css
@@ -10,7 +10,7 @@
 
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   align-content: center;
@@ -20,22 +20,140 @@
 .container_galleryGrid .containerBoxSearch {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   align-content: center;
   width: 100%;
   height: 100%;
   margin-bottom: 1.5rem;
+  position: relative;
 }
 .container_galleryGrid .containerBoxSearch .boxSearchColor {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   align-content: center;
   width: 50%;
 
-  border: 35px solid #fef0ed;
+  border: 2rem solid #fef0ed;
+  background: #fef0ed;
+  padding-top: 2rem;
+  padding-bottom: 6rem;
+  border-radius: 3rem;
+  margin-bottom: 8rem;
+}
+.container_galleryGrid .containerBoxSearch .boxSearchColor .textParts {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.container_galleryGrid
+  .containerBoxSearch
+  .boxSearchColor
+  .textParts
+  .blackPart {
+  color: #000000;
+  font-size: 1.5rem;
+}
+
+.container_galleryGrid
+  .containerBoxSearch
+  .boxSearchColor
+  .textParts
+  .pinkPart {
+  color: #ff4a97;
+  font-size: 1.5rem;
+  margin-left: 0.5rem;
+}
+
+.container_galleryGrid .containerBoxSearch .boxSearchColor p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 25px;
+  text-align: center;
+
+  /* purple/900 */
+
+  color: #330043;
+  margin-top: 3rem;
+}
+
+.container_galleryGrid .containerBoxSearch .input_box {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 50%;
+
+  /* margin-top: 1rem;
+  margin-bottom: 1rem; */
+  position: absolute;
+
+  bottom: calc(50% - 8rem);
+}
+.container_galleryGrid .containerBoxSearch .input_box .seacrhInput {
+  width: 50%;
+  height: 2rem;
+  border: 1px solid #000000;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  margin-right: 0.5rem;
+  border: none;
+  background: #ffffff;
+  /* Box/buttom */
+
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  border-radius: 100px;
+}
+
+.container_galleryGrid .containerBoxSearch .input_box .seacrhInput:focus {
+  outline: none;
+}
+
+.container_galleryGrid .containerBoxSearch .input_box .box_box {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  position: relative;
+}
+
+.container_galleryGrid .containerBoxSearch .input_box .buttonSearch {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 10%;
+  border: 1px solid #000000;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  margin-left: 0.5rem;
+  border: none;
+  border-radius: 100px;
+  background: #ff4a97;
+  height: 2rem;
+  position: absolute;
+  right: 15rem;
+}
+
+.container_galleryGrid .containerBoxSearch .input_box .buttonSearch img {
+  width: 1.5rem;
+  height: 1.5rem;
 }
