--- a/src/components/galleryGrid/index.css
+++ b/src/components/galleryGrid/index.css
@@ -15,18 +15,17 @@
   align-items: center;
   align-content: center;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 .container_galleryGrid .containerBoxSearch {
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
+
   justify-content: center;
   align-items: center;
   align-content: center;
   width: 100%;
-  height: 100%;
-  margin-bottom: 1.5rem;
+
   position: relative;
 }
 .container_galleryGrid .containerBoxSearch .boxSearchColor {
@@ -69,14 +68,13 @@
   .pinkPart {
   color: #ff4a97;
   font-size: 1.5rem;
-  margin-left: 0.5rem;
 }
 
 .container_galleryGrid .containerBoxSearch .boxSearchColor p {
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 25px;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
   text-align: center;
 
   /* purple/900 */
@@ -101,7 +99,7 @@
   bottom: calc(50% - 8rem);
 }
 .container_galleryGrid .containerBoxSearch .input_box .seacrhInput {
-  width: 50%;
+  width: 100%;
   height: 2rem;
   border: 1px solid #000000;
   border-radius: 0.5rem;
@@ -126,7 +124,7 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  width: 100%;
+  width: calc(100% - 10rem);
 
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -150,10 +148,189 @@
   background: #ff4a97;
   height: 2rem;
   position: absolute;
-  right: 15rem;
+  right: 0rem;
 }
 
 .container_galleryGrid .containerBoxSearch .input_box .buttonSearch img {
   width: 1.5rem;
   height: 1.5rem;
+}
+.container_galleryGrid .gallery_grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 1rem;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 2rem 4rem;
+}
+.container_galleryGrid .gallery_grid .gallery_grid_item {
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.container_galleryGrid .gallery_grid .gallery_grid_item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0rem;
+}
+
+.container_galleryGrid .gallery_grid .gallery_grid_item .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background: linear-gradient(0deg, rgba(51, 0, 67, 0.6), rgba(51, 0, 67, 0.6));
+  border-radius: 0rem;
+}
+
+.container_galleryGrid .gallery_grid .gallery_grid_item .overlay .content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+.container_galleryGrid
+  .gallery_grid
+  .gallery_grid_item
+  .overlay
+  .content
+  button {
+  border: none;
+  outline: none;
+  padding: 1rem 2rem 1rem 2rem;
+  color: #fff;
+  background: linear-gradient(90.4deg, #9747ff 0.36%, #ff4a97 127.9%);
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 1rem;
+}
+.container_galleryGrid
+  .gallery_grid
+  .gallery_grid_item
+  .overlay
+  .content
+  button
+  p {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 0.8rem;
+  line-height: 1rem;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+}
+.container_galleryGrid .gallery_grid .gallery_grid_item .overlay .content h3 {
+  font-style: normal;
+  font-weight: 400;
+  width: 100%;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  text-align: center;
+  color: #fff;
+}
+
+.container_galleryGrid .gallery_grid .gallery_grid_item:hover .overlay {
+  opacity: 1;
+}
+
+@media (max-width: 1600px) {
+  .container_galleryGrid .containerBoxSearch .input_box {
+    bottom: calc(50% - 10rem);
+  }
+}
+
+@media (max-width: 760px) {
+  .container_galleryGrid .containerBoxSearch .input_box {
+    bottom: calc(50% - 12rem);
+  }
+}
+
+@media (max-width: 795px) {
+  .container_galleryGrid .containerBoxSearch .input_box .box_box {
+    width: calc(100% - 1rem);
+  }
+}
+
+@media (max-width: 415px) {
+  .container_galleryGrid
+    .containerBoxSearch
+    .boxSearchColor
+    .textParts
+    .blackPart {
+    font-size: 1rem;
+  }
+  .container_galleryGrid
+    .containerBoxSearch
+    .boxSearchColor
+    .textParts
+    .pinkPart {
+    font-size: 1rem;
+  }
+  .container_galleryGrid .containerBoxSearch .input_box {
+    bottom: calc(50% - 15rem);
+  }
+}
+
+@media (max-width: 811px) {
+  .container_galleryGrid .gallery_grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 1rem;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 2rem 4rem;
+  }
+}
+
+@media (max-width: 565px) {
+  .container_galleryGrid .gallery_grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 1rem;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 2rem 4rem;
+  }
+}
+
+@media (max-width: 511px) {
+  .container_galleryGrid .containerBoxSearch .boxSearchColor p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 420px) {
+  .container_galleryGrid .gallery_grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-gap: 1rem;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 2rem 4rem;
+  }
 }
