--- a/src/components/galleryGrid/index.css
+++ b/src/components/galleryGrid/index.css
@@ -252,6 +252,64 @@
   opacity: 1;
 }
 
+.container_galleryGrid .pagination {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 2rem 4rem;
+  margin-top: 2rem;
+}
+.container_galleryGrid .pagination .buttonPagination {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #000000;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  /* margin-right: 0.5rem; */
+  border: none;
+  border-radius: 100px;
+  background: #ffffff;
+  /* Box/buttom */
+
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  border-radius: 100px;
+}
+
+.container_galleryGrid .pagination span {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #000000;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.container_galleryGrid .pagination span:hover {
+  color: #ff4a97;
+}
+.container_galleryGrid .pagination .buttonPagination img {
+  width: 5rem;
+  cursor: pointer;
+  height: 5rem;
+}
+
 @media (max-width: 1600px) {
   .container_galleryGrid .containerBoxSearch .input_box {
     bottom: calc(50% - 10rem);
