--- a/src/components/galleryId/styles.css
+++ b/src/components/galleryId/styles.css
@@ -40,10 +40,11 @@
   justify-content: flex-start;
   width: 100%;
   height: 100%;
-  background-color: #f5f5f5;
+  background-color: transparent;
   margin-top: 1rem;
   margin-bottom: 1rem;
   margin-left: 2rem;
+  z-index: 1;
 }
 .containerAllGallery
   > .containerRowGalleryId
@@ -190,8 +191,9 @@
   > .containerColumnContentR
   > .containerImageGallery
   > img {
-  width: 100%;
-  height: 100%;
+  width: 706px;
+  height: 424px;
+  /* height: 370px; */
   object-fit: cover;
 
   border-radius: 1rem;
@@ -278,6 +280,291 @@
   height: 100%; */
 /* z-index: 999; */
 /* } */
+
+.containerAllGallery > .popupContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(51, 0, 67, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 3s ease-in-out;
+  -webkit-transition: all 3s ease-in-out;
+}
+
+.containerAllGallery > .popupContainer > .popupClose {
+  position: absolute;
+  top: 5%;
+  right: 10%;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  border-radius: 50%;
+  box-shadow: 0px 0px 9px transparent;
+  align-self: flex-end;
+  margin-right: 1.5rem;
+  margin-bottom: 2rem;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.containerAllGallery > .popupContainer > .buttonPopupRight {
+  position: absolute;
+  top: 50%;
+  right: 10%;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  border-radius: 50%;
+  box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
+  align-self: flex-end;
+  margin-right: 1.5rem;
+  margin-bottom: 2rem;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.containerAllGallery > .popupContainer > .buttonPopupLeft {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  border-radius: 50%;
+  box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
+  align-self: flex-end;
+  margin-left: 1.5rem;
+  margin-bottom: 2rem;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.containerAllGallery > .popupContainer > img {
+  width: 80rem;
+
+  object-fit: cover;
+  filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.15));
+  border-radius: 35px;
+  z-index: 998;
+}
+
+/* @media (max-width: 768px) {
+  .containerAllGallery > .popupContainer > img {
+    width: 50rem;
+  }
+}
+
+@media (max-width: 1281px) {
+  .containerAllGallery > .popupContainer > img {
+    width: 50rem;
+  }
+
+  .containerAllGallery > .popupContainer > .popupClose {
+    top: 12%;
+  }
+}
+
+@media (max-width: 1025px) {
+  .containerAllGallery > .popupContainer > img {
+    width: 50rem;
+  }
+
+  .containerAllGallery > .popupContainer > .popupClose {
+    top: 5%;
+    right: 5%;
+  }
+  .containerAllGallery > .popupContainer > .buttonPopupLeft {
+    left: 2%;
+  }
+  .containerAllGallery > .popupContainer > .buttonPopupRight {
+    right: 2%;
+  }
+} */
+
+/* @media (max-width: 414px) {
+  .containerAllGallery
+    > .containerRowGalleryId
+    > .containerColumnContentR
+    > .containerImageGallery
+    > img {
+    width: 100%;
+  }
+  .containerAllGallery > .popupContainer {
+    flex-direction: column;
+    background-color: black;
+    width: 50%;
+    height: 50%;
+  }
+  .containerAllGallery > .popupContainer > img {
+    width: 10rem;
+  } */
+/*
+  .containerAllGallery > .popupContainer > .popupClose {
+    top: 0%;
+    right: 0%;
+  }
+  .containerAllGallery > .popupContainer > .buttonPopupLeft {
+    bottom: 0%;
+  }
+  .containerAllGallery > .popupContainer > .buttonPopupRight {
+    bottom: 0%;
+  } */
+/* } */
+
+@media (max-width: 1801px) {
+  .containerAllGallery > .popupContainer > img {
+    width: 50rem;
+  }
+}
+
+@media (max-width: 1205px) {
+  .containerAllGallery > .popupContainer > img {
+    width: 40rem;
+  }
+}
+
+@media (max-width: 811px) {
+  .containerAllGallery > .popupContainer > img {
+    width: 90%;
+  }
+
+  .containerAllGallery > .popupContainer > .buttonPopupRight {
+    top: 65%;
+    right: 10%;
+  }
+
+  .containerAllGallery > .popupContainer > .buttonPopupLeft {
+    top: 65%;
+    left: 10%;
+  }
+  .containerAllGallery > .popupContainer > .popupClose {
+    top: 20%;
+  }
+}
+
+@media (width: 810px) {
+  .containerAllGallery > .popupContainer > img {
+    width: 70%;
+  }
+  .containerAllGallery > .popupContainer > .buttonPopupRight {
+    top: 50%;
+    right: 0%;
+  }
+
+  .containerAllGallery > .popupContainer > .buttonPopupLeft {
+    top: 50%;
+    left: 0%;
+  }
+  .containerAllGallery > .popupContainer > .popupClose {
+    top: 20%;
+  }
+}
+@media (max-width: 429px) {
+  .containerAllGallery > .popupContainer > img {
+    width: 90%;
+  }
+
+  .containerAllGallery > .popupContainer > .popupClose {
+    top: 30%;
+  }
+}
+
+@media (max-width: 376px) {
+  .containerAllGallery > .popupContainer > .popupClose {
+    top: 25%;
+  }
+}
+
+@media (max-width: 811px) {
+  /* .containerAllGallery
+    > .containerRowGalleryId
+    > .containerColumnContentR
+    > .containerImageGallery
+    > img {
+    width: 300px;
+    height: 270px;
+    object-fit: cover;
+    box-shadow: 0px 0px 9px transparent;
+  } */
+  .containerAllGallery > .containerRowGalleryId {
+    flex-direction: column;
+  }
+  .containerAllGallery > .containerRowGalleryId > .containerColumnContentR {
+    order: 1;
+  }
+  .containerAllGallery > .containerRowGalleryId > .containerColumnContentL {
+    order: 0;
+  }
+}
+
+@media (max-width: 737px) {
+  .containerAllGallery
+    > .containerRowGalleryId
+    > .containerColumnContentR
+    > .boxRowButtons
+    > .buttonBorder {
+    margin-right: 1rem;
+  }
+  .containerAllGallery
+    > .containerRowGalleryId
+    > .containerColumnContentR
+    > .boxRowButtons {
+    margin-top: 1rem;
+    padding: 0 0rem;
+    align-items: center;
+    justify-content: center;
+  }
+  .containerAllGallery
+    > .containerRowGalleryId
+    > .containerColumnContentR
+    > .buttonShareGallery {
+    margin-bottom: 1rem;
+  }
+
+  .containerAllGallery
+    > .containerRowGalleryId
+    > .containerColumnContentR
+    > .containerImageGallery {
+    padding: 0 0rem;
+  }
+  .containerAllGallery
+    > .containerRowGalleryId
+    > .containerColumnContentR
+    > .containerImageGallery
+    > img {
+    width: 100%;
+    height: 170px;
+    object-fit: contain;
+    box-shadow: 0px 0px 9px transparent;
+  }
+  .containerAllGallery > .containerRowGalleryId {
+    flex-direction: column;
+  }
+  .containerAllGallery > .containerRowGalleryId > .containerColumnContentR {
+    order: 1;
+  }
+  .containerAllGallery > .containerRowGalleryId > .containerColumnContentL {
+    order: 0;
+  }
+}
 
 @media (max-width: 415px) {
   .containerAllGallery > .containerRowGalleryId {
