--- a/src/page/gallerylPage/galleryId/styles.css
+++ b/src/page/gallerylPage/galleryId/styles.css
@@ -365,6 +365,9 @@
   border-radius: 35px;
   z-index: 998;
 }
+.containerFooterGallery {
+  width: 100%;
+}
 
 /* @media (max-width: 768px) {
   .containerAllGallery > .popupContainer > img {
