refactor: refatorando os arquivos do projeto

--- a/src/components/cardActivitys/index.css
+++ b/src/components/cardActivitys/index.css
@@ -9,6 +9,13 @@
   border-left: 3.78591px solid #ff4a97;
   box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
   border-radius: 7.57182px;
+  cursor: pointer;
+  transition: box-shadow 0.25s ease, transform 0.25s ease,
+    -webkit-transform 0.25s ease;
+}
+
+.Container_Card:hover {
+  transform: translate3d(0, -3px, 0);
 }
 
 .Container_img {
