--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,23 +1,23 @@
 .header > .containerNavbar {
-  width: 100%;
-  min-width: 100%;
+  /* width: 100%; */
+  /* min-width: 100%; */
   margin: 0 auto;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  /* display: flex; */
+  /* justify-content: space-evenly; */
+  /* align-items: center; */
 }
 .header {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  padding: 1.5rem 0rem;
+  padding: 1.5rem 0rem; */
   transition: all 0.5s ease;
-  z-index: 100;
-  background: transparent;
+  /* z-index: 100;
+  background: transparent; */
 }
 .elipse1 {
   background: url('./image/Ellipse 6.svg') no-repeat center;
@@ -129,7 +129,7 @@
 .header nav ul li a.active {
   background-color: var(--base-color-light);
 }
-.header .containerNavbar .containerLogo {
+/* .header .containerNavbar .containerLogo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -139,7 +139,7 @@
   gap: 1.5rem;
 
   background: transparent;
-}
+} */
 .logo {
   font: 400 1rem var(--logo-font);
   color: #330043;
@@ -162,11 +162,12 @@
   bottom: -0.5rem;
 }
 
-.sideLogo {
+/* .sideLogo {
   object-fit: contain;
   width: 20%;
   height: 20%;
-}
+} */
+
 .header.scroll .logo {
   color: var(--base-color);
 }
