--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,26 +4,26 @@
 
 @layer base {
   h1{
-    @apply font-poppins font-bold text-purple-900 text-[3.5rem] leading-tight; 
+    @apply font-poppins font-bold text-purple-900 xl:text-[3.5rem] md:text-4xl max-md:text-2xl ; 
   }
   h2 {
-    @apply font-paytone font-normal text-5xl text-purple-900 mb-8; 
+    @apply font-paytone font-normal text-5xl text-purple-900 max-md:mb-6 md:mb-8 max-lg:text-4xl; 
   }
 
   h3{
-    @apply font-paytone font-normal text-[2rem] text-purple-900 leading-10 mb-8;
+    @apply font-paytone font-normal text-[2rem] text-purple-900 leading-10 max-md:mb-6 md:mb-8 max-lg:text-2xl;
   }
   h4{
-    @apply font-poppins font-semibold uppercase text-pink-500 text-lg;
+    @apply font-poppins font-semibold uppercase text-pink-500 text-lg max-lg:text-sm;
   }
   h5{
     @apply font-poppins font-bold text-purple-900 text-xs;
   }
   p {
-    @apply text-lg font-quicksand font-normal text-gray-400; 
+    @apply text-lg font-quicksand font-normal text-gray-400 max-md:text-xs; 
   }
   span{
-    @apply font-quicksand font-medium text-gray-400 text-base;
+    @apply font-quicksand font-medium text-gray-400 text-base max-lg:text-sm;
   }
   input, textarea{
     @apply border-solid border-2 w-full bg-[#F6F6F6] border-transparent px-6 py-3 font-quicksand font-medium text-sm text-gray-400 focus:border-pink-500 focus:outline-none;
@@ -63,14 +63,14 @@
 
 @layer components {
   .padding{
-    @apply py-24;
+    @apply py-24 max-md:py-16;
   }
 
   .card{
     @apply shadow-pop p-6 rounded-[2rem] bg-white border-white  border-solid border-2 transform duration-300;
   }
   .container {
-    @apply mx-auto max-w-[68rem] my-0;
+    @apply xl:mx-auto xl:w-[68rem] my-0 w-full px-6 md:px-16 xl:px-0 ;
   }
 
   .bg-pink-yellow{
