--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,7 +4,7 @@
 
 @layer base {
   h1{
-    @apply font-poppins font-bold text-purple-900 xl:text-[3.5rem] md:text-4xl max-md:text-2xl ; 
+    @apply font-poppins font-bold text-purple-900 xl:text-[3.5rem] xl:leading-tight max-md:text-3xl md:text-4xl; 
   }
   h2 {
     @apply font-paytone font-normal text-5xl text-purple-900 max-md:mb-6 md:mb-8 max-lg:text-4xl; 
@@ -20,10 +20,10 @@
     @apply font-poppins font-bold text-purple-900 text-xs;
   }
   p {
-    @apply text-lg font-quicksand font-normal text-gray-400 max-md:text-xs; 
+    @apply text-lg font-quicksand font-normal text-gray-400 max-sm:text-xs sm:text-base; 
   }
   span{
-    @apply font-quicksand font-medium text-gray-400 text-base max-lg:text-sm;
+    @apply font-quicksand font-medium text-gray-400 text-base max-sm:text-xs;
   }
   input, textarea{
     @apply border-solid border-2 w-full bg-[#F6F6F6] border-transparent px-6 py-3 font-quicksand font-medium text-sm text-gray-400 focus:border-pink-500 focus:outline-none;
@@ -70,7 +70,7 @@
     @apply shadow-pop p-6 rounded-[2rem] bg-white border-white  border-solid border-2 transform duration-300;
   }
   .container {
-    @apply xl:mx-auto xl:w-[68rem] my-0 w-full px-6 md:px-16 xl:px-0 ;
+    @apply xl:mx-auto xl:w-[68rem] my-0 w-full px-4 md:px-12 lg:px-16 ;
   }
 
   .bg-pink-yellow{
@@ -123,6 +123,10 @@
 
   header.scroll {
     @apply bg-white shadow-sm border-b-[1px] border-b-gray-100 px-4;
+  }
+
+  .header-menu{
+    @apply flex flex-col absolute bg-white top-4 right-0 shadow-2xl rounded-xl mt-8 py-2 px-4 gap-4 ;
   }
   
   .scroller::-webkit-scrollbar {
