--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,26 +4,33 @@
 
 @layer base {
   h1{
-    @apply font-poppins font-bold text-purple-900 xl:text-[3.5rem] xl:leading-tight max-md:text-3xl md:text-4xl; 
+    @apply font-poppins font-bold text-purple-900 
+    text-4xl md:text-5xl xl:text-[3.5rem]; 
   }
   h2 {
-    @apply font-paytone font-normal text-5xl text-purple-900 max-md:mb-6 md:mb-8 max-lg:text-4xl; 
+    @apply font-paytone font-normal  text-purple-900 
+    text-3xl md:text-4xl xl:text-5xl; 
   }
 
   h3{
-    @apply font-paytone font-normal text-[2rem] text-purple-900 leading-10 max-md:mb-6 md:mb-8 max-lg:text-2xl;
+    @apply font-paytone font-normal  text-purple-900 mb-4 md:mb-8
+    text-2xl md:text-3xl xl:text-[2rem];
   }
   h4{
-    @apply font-poppins font-semibold uppercase text-pink-500 text-lg max-lg:text-sm;
+    @apply font-poppins font-semibold uppercase text-pink-500 
+    text-lg md:text-xl xl:text-2xl;
   }
   h5{
-    @apply font-poppins font-bold text-purple-900 text-xs;
+    @apply font-poppins font-bold text-purple-900 
+    text-base md:text-lg xl:text-xl;
   }
   p {
-    @apply text-lg font-quicksand font-normal text-gray-400 max-sm:text-xs sm:text-base; 
+    @apply font-quicksand font-normal text-gray-400 
+    text-sm md:text-base xl:text-lg; 
   }
   span{
-    @apply font-quicksand font-medium text-gray-400 text-base max-sm:text-xs;
+    @apply font-quicksand font-medium text-gray-400 
+    text-sm md:text-base xl:text-lg;
   }
   input, textarea{
     @apply border-solid border-2 w-full bg-[#F6F6F6] border-transparent px-6 py-3 font-quicksand font-medium text-sm text-gray-400 focus:border-pink-500 focus:outline-none;
@@ -66,12 +73,14 @@
     @apply py-24 max-md:py-16;
   }
 
+  .container {
+    @apply xl:mx-auto xl:w-[68rem] my-0 w-full px-6 md:px-12 xl:px-16 ;
+  }
+
   .card{
     @apply shadow-pop p-6 rounded-[2rem] bg-white border-white  border-solid border-2 transform duration-300;
   }
-  .container {
-    @apply xl:mx-auto xl:w-[68rem] my-0 w-full px-4 md:px-12 lg:px-16 ;
-  }
+  
 
   .bg-pink-yellow{
     color: #fff;
