activity page responsiveness

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,7 @@
     text-4xl md:text-5xl xl:text-[3.5rem]; 
   }
   h2 {
-    @apply font-paytone font-normal  text-purple-900 
+    @apply font-paytone font-normal  text-purple-900 mb-4 md:mb-8
     text-3xl md:text-4xl xl:text-5xl; 
   }
 
@@ -23,6 +23,10 @@
   h5{
     @apply font-poppins font-bold text-purple-900 
     text-base md:text-lg xl:text-xl;
+  }
+  h6{
+    @apply font-poppins font-bold text-purple-900 
+    text-xs md:text-xs xl:text-sm;
   }
   p {
     @apply font-quicksand font-normal text-gray-400 
@@ -43,7 +47,7 @@
   }
 
   input::placeholder, textarea::placeholder{
-    @apply text-gray-300 text-xs font-medium;
+    @apply text-gray-300 text-sm font-medium;
   }
 
   table{
@@ -65,6 +69,9 @@
   th, td{
     @apply px-8 py-3 text-xs text-start text-gray-400;
   }
+  a{
+    @apply active:bg-transparent text-base md:text-lg xl:text-xl;
+  }
 
 }
 
@@ -74,7 +81,7 @@
   }
 
   .container {
-    @apply xl:mx-auto xl:w-[68rem] my-0 w-full px-6 md:px-12 xl:px-16 ;
+    @apply xl:mx-auto xl:w-[68rem] my-0 w-full px-6 md:px-8 xl:px-0;
   }
 
   .card{
