--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,7 +22,7 @@
   }
   h5{
     @apply font-poppins font-bold text-purple-900 
-    text-base md:text-lg xl:text-xl;
+    text-sm md:text-base;
   }
   h6{
     @apply font-poppins font-bold text-purple-900 
